--- a/documentation/SWOT/src/SWOT_main.tex
+++ b/documentation/SWOT/src/SWOT_main.tex
@@ -53,7 +53,6 @@
     \begin{itemize}
         \item[] Ik ben zeer leergierig aangelegd en wil bij complexe problemen altijd de beste oplossing zoeken.
         \item[] Ik ben een doorzetter, ik wil hoe dan ook dat een project slaagt.
-        \item[]
     \end{itemize}
 
     Op gebied van het project:
@@ -96,7 +95,8 @@
     \begin{itemize}
         \item[] Het toepassen van documentatie op een professionele manier die nuttig wordt geacht.
         \item[] Het team motiveren en aansporen om hun taken tot een goed einde brengen en dat ik mij hierbij ga proberen open te stellen voor andermans bevindingen.
-        \item[] Omdat ik vorig semster ongestructureerd te werk ben gegaan wil ik het dit semester anders gaan aanpakken, door middel van een strak schema.
+        \item[] Omdat ik vorig semester ongestructureerd te werk ben gegaan wil ik het dit semester anders gaan aanpakken, door middel van een strak schema.
+        \item[] Ik zie het onderzoek als een kans om mijzelf in de toekomst voor te bereiden voor een levenslang leren.
     \end{itemize}
 
     \section{Bedreigingen}\label{sec:bedreigingen}
