--- a/documentation/PDR/src/appendices/main.tex
+++ b/documentation/PDR/src/appendices/main.tex
@@ -1,4 +1,11 @@
+Add only appendixes that you actually reference in the document.
+There is no need to add pieces of work to the appendix if they can be found in Canvas.
 
+\chapter{SWOT}
+\label{ch:swot}
 \includepdf[pages=-]{../../SWOT/out/SWOT_Rik_Peeters.pdf}
+
+\chapter{Context based research}
+\label{ch:context_based_research}
 \includepdf[pages=-]{../../context_based_research/out/context_based_research_Rik_Peeters.pdf}
 
