Article Seeder done

--- a/documentation/context_based_research/src/context_based_research_main.tex
+++ b/documentation/context_based_research/src/context_based_research_main.tex
@@ -19,7 +19,8 @@
     \label{ch:inleiding}
 
 
-
+    Hoe jou je track ofp data die door verschillende microservices gaan en hoe weet je snel waat wat wordt opgeslagen
+    Hoe wordt data gemerged en up-to-date gehouden binnen de verschillender services.
 
 
 \end{document}
