Project description PDR

--- a/documentation/project/src/project_main.tex
+++ b/documentation/project/src/project_main.tex
@@ -20,27 +20,65 @@
 
     \chapter{Inleiding}
     \label{ch:inleiding}
-    Tevredenheid bij klanten en organisaties is altijd belangrijk voor ieder bedrijf.
-    Daarom wil ik ervoor zorgen dat het product dat ik ga ontwikkelen een bedragen hieraan kan bieden.
     Dit verslag documenteert het project Flowcontrol en de technische aspecten hiervan.
+    Het project dat ik ga ontwikkelen gaat ervoor zorgen dat data wordt gedigitaliseerd en dat processen worden
+    geautomatiseerd.
+    Hierdoor zullen werknemer meer tijd overhouden voor andere werkzaamheden die van belang zijn.
+    Omdat ik zelf binnen een distributiecentrum werkzaam ben weet ik van het reilen en zeilen ben ik mij bewust van
+    het handmatig doorvoeren van de orders.
+    Het process is zeer omslachtig en dit kan natuurlijk verbeterd worden.
+    Vandaar mijn motivatie om dit project te
+    ontwikkelen.
+    Tevredenheid bij klanten en organisaties is altijd belangrijk voor ieder bedrijf.
+    Daarom wil ik ervoor zorgen dat het product dat ik ga ontwikkelen een bijdrage hieraan kan bieden.
 
     \chapter{Project}
     \label{ch:project}
     \section{Context}
     \label{sec:context}
     Voor mijn individueel project ga ik een distributie app ontwikkelen genaamd Flowcontrol.
-    Deze app gaat er voor zorgen dat het distributie process gedigitaliseerd wordt maar ook geautomatiseerd.
+    Deze app gaat er voor zorgen dat het distributieproces gedigitaliseerd wordt maar ook geautomatiseerd.
     De processen die worden gedigitaliseerd zijn onder te verdelen in verschillende modules waardoor het project zeer modulair wordt
-    Deze modules bestaan bijvoorbeeld uit: Een aanlever module. (Kweker), Een planning module, een productie module, transport module en een distributie module.
+    Deze modules bestaan bijvoorbeeld uit: een aanlever module (kweker), een planning module, een productie module,
+    een transport module en een distributie module en ga zo maar door.
 
     \section{Doel van het project}
     \label{sec:doel-van-het-project}
-    Het doel van dit project is dat de oude excel sheets en papieren handel in de prullenbak kan worden gegooit.
+    Het doel van dit project is dat de oude excel-sheets en papieren handel in de prullenbak kan worden gegooid.
+    Het distributie proces wordt hierdoor simpelweg sneller en makkelijker.
     Het doel is ook dat het project inzicht geeft in bepaalde zaken die vroeger nooit overzichtelijk waren.
-    Hierbij kun je bijvoorbeeld denken aan precieze tijd registratie wanneer wat wordt afgehandeld.
+    Hierbij kun je bijvoorbeeld denken aan precieze tijd registratie, wanneer wat wordt afgehandeld.
 
-    Het bovenstaande project wordt flowcontrol genoemd ik kies ervoor dit project op te splitsen in verschillende deeltrajecten genoemd modules.
-    Ik ga mijn focus leggen op de module productie.
+    \newline
 
+    Het bovenstaande project wordt Flowcontrol genoemd. Ik kies ervoor dit project op te splitsen in verschillende
+    deeltrajecten genoemd modules. Mijn focus ligt op de module productie.
+
+    \chapter{Sprints}\label{ch:sprints}
+    \section{Sprint 0}\label{sec:sprint-0}
+    \subsection{Goals}\label{subsec:goals}
+    In de eerste sprint heb ik mijn focus gelegd op het bedenken van mijn project idee "Flowcontrol".
+    Dit idee is tot stand gekomen aan de hand van mijn eigen ervaringen binnen deze branch.
+
+    \subsection{Achievements}\label{subsec:achievements}
+    Tijdens deze sprint heb ik mijn hoofd onderzoeksvraag bedacht. Deze zal ik in de aankomende sprints verder uitwerken
+
+    \subsection{Project management tool}\label{subsec:project-management-tool}
+    Als project management tool heb ik ervoor gekozen om de omgeving van Github te gebruiken met issue bord als
+    backlog en het kanban project bord.
+    Ik heb hiervoor gekozen omdat Github vrij nieuw is en ik graag wil ervaren hoe dit werkt.
+    Ook mijn CI/CD module zal in de omgeving Github worden ondergebracht doormiddel van Github actions.
+
+    \subsection{Github links}\label{subsec:github-links}
+    Nog niet van toepassing
+
+    \subsection{Retrospective}\label{subsec:retrospective}
+    In de eerste week heb ik veel tijd besteed aan het uitdenken van het idee.
+    Ik ben zeer tevreden met hoe ik dit idee heb uitgedacht en de modulariteit hiervan.
+
+    \subsection{Volgende sprint}\label{subsec:volgende-sprint}
+    In de volgende sprint ga ik mijn onderzoeksvraag uitwerken.
+    Hierbij ga ik verschillende prototypes maken.
+    Zo heb ik meer inzicht op wat ik ga ontwikkelen en vooral hoe.
 
 \end{document}
