Project description PDR

--- a/documentation/project/src/project_main.tex
+++ b/documentation/project/src/project_main.tex
@@ -70,7 +70,11 @@
     Ook mijn CI/CD module zal in de omgeving Github worden ondergebracht doormiddel van Github actions.
 
     \subsection{Github links}\label{subsec:github-links}
-    Nog niet van toepassing
+    Github:
+    PDR: https://github.com/rikp777/RP-Flowcontrol/blob/master/documentation/PDR/out/PDR_Rik_Peeters.pdf
+    Project:
+    Context based research:
+    SWOT:
 
     \subsection{Retrospective}\label{subsec:retrospective}
     In de eerste week heb ik veel tijd besteed aan het uitdenken van het idee.
