Create Palletlabel communicates with Article service

--- a/documentation/project/src/packages.sty
+++ b/documentation/project/src/packages.sty
@@ -44,6 +44,16 @@
 % Include pdf
 \usepackage{pdfpages}
 
+\usepackage{hyperref}
+\hypersetup{
+	colorlinks=true,
+	linkcolor=blue,
+	filecolor=magenta,
+	urlcolor=cyan,
+}
+
+\urlstyle{same}
+
 % Header setup
 \usepackage{fancyhdr}
 \pagestyle{fancy}
