--- a/documentation/project/src/project_main.tex
+++ b/documentation/project/src/project_main.tex
@@ -49,14 +49,23 @@
     Het doel is ook dat het project inzicht geeft in bepaalde zaken die vroeger nooit overzichtelijk waren.
     Hierbij kun je bijvoorbeeld denken aan precieze tijd registratie, wanneer wat wordt afgehandeld.
 
+    \chapter{Test}
+    \label{ch:test}
     \newline
 
     Het bovenstaande project wordt Flowcontrol genoemd. Ik kies ervoor dit project op te splitsen in verschillende
     deeltrajecten genoemd modules. Mijn focus ligt op de module productie.
 
-    \chapter{Sprints}\label{ch:sprints}
-    \section{Sprint 0}\label{sec:sprint-0}
-    \subsection{Goals}\label{subsec:goals}
+    \newpage
+
+    \chapter{Sprints}
+    \label{ch:sprints}
+
+    \section{Sprint 0}
+    \label{sec:sprint-0}
+
+    \subsection{Goals}
+    \label{subsec:goals}
     In de eerste sprint heb ik mijn focus gelegd op het bedenken van mijn project idee "Flowcontrol".
     Dit idee is tot stand gekomen aan de hand van mijn eigen ervaringen binnen deze branch.
 
@@ -70,11 +79,22 @@
     Ook mijn CI/CD module zal in de omgeving Github worden ondergebracht doormiddel van Github actions.
 
     \subsection{Github links}\label{subsec:github-links}
-    Github:
-    PDR: https://github.com/rikp777/RP-Flowcontrol/blob/master/documentation/PDR/out/PDR_Rik_Peeters.pdf
-    Project:
-    Context based research:
-    SWOT:
+    Github links:\\
+    \newline
+    Documentatie:
+    \begin{itemize}
+        \item \href{https://github.com/rikp777/RP-Flowcontrol/blob/master/documentation/PDR/out/PDR_Rik_Peeters.pdf}{PDR}
+        \item \href{https://github.com/rikp777/RP-Flowcontrol/blob/master/documentation/project/out/Project_Rik_Peeters.pdf}{Project}
+        \item \href{https://github.com/rikp777/RP-Flowcontrol/blob/master/documentation/context_based_research/out/context_based_research_Rik_Peeters.pdf}{Context based research}
+        \item \href{https://github.com/rikp777/RP-Flowcontrol/blob/master/documentation/SWOT/out/SWOT_Rik_Peeters.pdf}{SWOT}
+    \end{itemize}
+    \newline
+    Tools:
+    \begin{itemize}
+        \item \href{https://github.com/rikp777/RP-Flowcontrol/issues}{Github backlog}
+        \item \href{https://github.com/rikp777/RP-Flowcontrol/projects/1}{Github kanban bord}
+        \item Github actions CI/CD n.v.t.
+    \end{itemize}
 
     \subsection{Retrospective}\label{subsec:retrospective}
     In de eerste week heb ik veel tijd besteed aan het uitdenken van het idee.
