PDR document update

--- a/documentation/PDR/src/packages.sty
+++ b/documentation/PDR/src/packages.sty
@@ -22,6 +22,8 @@
 \graphicspath{{images/}}
 
 
+\usepackage[utf8]{inputenc}
+
 % Toevoeging zorgt dat ':' correct weergegeven wordt.
 \usepackage{caption}
 
