Kafka setup and documents

--- a/documentation/context_based_research/src/context_based_research_main.tex
+++ b/documentation/context_based_research/src/context_based_research_main.tex
@@ -1,6 +1,6 @@
-%& -job-name=context_based_research_Rik_Peeters
 
-\documentclass[11pt, twoside]{report}
+
+\documentclass{article}
 
 \usepackage{packages}
 
@@ -23,4 +23,25 @@
     Hoe wordt data gemerged en up-to-date gehouden binnen de verschillender services.
 
 
+\begin{pyconsole}
+x = 987.27
+x = x**2
+\end{pyconsole}
+
+The variable is $x=\pycon{x}$
+
 \end{document}
+
+
+%\documentclass[11pt]{article}
+%\usepackage[utf8]{inputenc}
+%\usepackage{amsmath}
+%\usepackage{amsfonts}
+%\usepackage{amssymb}
+%\usepackage{pythontex}
+%\begin{document}
+%
+%    \begin{pycode}
+%        print("Arbitrary text or results from the python code")
+%    \end{pycode}
+%\end{document}
