--- a/documentation/context_based_research/src/packages.sty
+++ b/documentation/context_based_research/src/packages.sty
@@ -41,6 +41,8 @@
 \definecolor{Sterktes}{RGB}{4, 191, 249}
 \definecolor{Zwaktes}{RGB}{133, 138, 232}
 
+\usepackage{pythontex}
+\usepackage{nopageno}
 
 
 % Header setup
