--- a/documentation/PDR/src/PDR_main.tex
+++ b/documentation/PDR/src/PDR_main.tex
@@ -1,4 +1,8 @@
-%& -job-name=PDR_Rik_Peeters
+%& -job-name=newfilenameialwayswanted
+
+% Linux arch support
+
+
 
 \documentclass[11pt, twoside]{report}
 
