Full docker support global docker not implemented #5

--- a/documentation/PDR/src/packages.sty
+++ b/documentation/PDR/src/packages.sty
@@ -19,7 +19,7 @@
 
 % De package graphicx is nodig om foto's weer te geven.
 \usepackage{graphicx}
-\graphicspath{{images/}}
+\graphicspath{{../../assets/}}
 
 
 \usepackage[utf8]{inputenc}
