--- a/documentation/project/src/project_main.tex
+++ b/documentation/project/src/project_main.tex
@@ -3,6 +3,8 @@
 \documentclass[11pt, twoside]{report}
 
 \usepackage{packages}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 
 %! Author = rikpe
 %! Date = 02/03/2021
@@ -49,8 +51,6 @@
     Het doel is ook dat het project inzicht geeft in bepaalde zaken die vroeger nooit overzichtelijk waren.
     Hierbij kun je bijvoorbeeld denken aan precieze tijd registratie, wanneer wat wordt afgehandeld.
 
-    \chapter{Test}
-    \label{ch:test}
     \newline
 
     Het bovenstaande project wordt Flowcontrol genoemd. Ik kies ervoor dit project op te splitsen in verschillende
@@ -61,25 +61,8 @@
     \chapter{Sprints}
     \label{ch:sprints}
 
-    \section{Sprint 0}
-    \label{sec:sprint-0}
-
-    \subsection{Goals}
-    \label{subsec:goals}
-    In de eerste sprint heb ik mijn focus gelegd op het bedenken van mijn project idee "Flowcontrol".
-    Dit idee is tot stand gekomen aan de hand van mijn eigen ervaringen binnen deze branch.
-
-    \subsection{Achievements}\label{subsec:achievements}
-    Tijdens deze sprint heb ik mijn hoofd onderzoeksvraag bedacht. Deze zal ik in de aankomende sprints verder uitwerken
-
-    \subsection{Project management tool}\label{subsec:project-management-tool}
-    Als project management tool heb ik ervoor gekozen om de omgeving van Github te gebruiken met issue bord als
-    backlog en het kanban project bord.
-    Ik heb hiervoor gekozen omdat Github vrij nieuw is en ik graag wil ervaren hoe dit werkt.
-    Ook mijn CI/CD module zal in de omgeving Github worden ondergebracht doormiddel van Github actions.
-
-    \subsection{Github links}\label{subsec:github-links}
-    Github links:\\
+    \section{Github links}\label{sec:github-links}
+    Github links: \\
     \newline
     Documentatie:
     \begin{itemize}
@@ -96,13 +79,57 @@
         \item Github actions CI/CD n.v.t.
     \end{itemize}
 
-    \subsection{Retrospective}\label{subsec:retrospective}
+    \newpage
+    \section{Sprint 0}
+    \label{sec:sprint-0}
+
+    \subsection{Goals}\label{subsec:goals-0}
+    In de eerste sprint heb ik mijn focus gelegd op het bedenken van mijn project idee "Flowcontrol".
+    Dit idee is tot stand gekomen aan de hand van mijn eigen ervaringen binnen deze branch.
+
+    \subsection{Achievements}\label{subsec:achievements-0}
+    Tijdens deze sprint heb ik mijn hoofd onderzoeksvraag bedacht.
+    Deze zal ik in de aankomende sprints verder uitwerken
+
+    \subsection{Project management tool}\label{subsec:project-management-tool}
+    Als project management tool heb ik ervoor gekozen om de omgeving van Github te gebruiken met issue bord als
+    backlog en het kanban project bord.
+    Ik heb hiervoor gekozen omdat Github vrij nieuw is en ik graag wil ervaren hoe dit werkt.
+    Ook mijn CI/CD module zal in de omgeving Github worden ondergebracht doormiddel van Github actions.
+
+    \subsection{Retrospective}\label{subsec:retrospective-0}
     In de eerste week heb ik veel tijd besteed aan het uitdenken van het idee.
     Ik ben zeer tevreden met hoe ik dit idee heb uitgedacht en de modulariteit hiervan.
 
-    \subsection{Volgende sprint}\label{subsec:volgende-sprint}
+    \subsection{Volgende sprint}\label{subsec:volgende-sprint-0}
     In de volgende sprint ga ik mijn onderzoeksvraag uitwerken.
     Hierbij ga ik verschillende prototypes maken.
     Zo heb ik meer inzicht op wat ik ga ontwikkelen en vooral hoe.
 
+    \newpage
+    \section{Sprint 1}
+    \label{sec:sprint-1}
+
+    \subsection{Goals}\label{subsec:goals=1}
+    Tijdens sprint 1 heb ik mijn prototype gemaakt en getoond aan verschillende docenten.
+    Hierbij heb ik feedback gekregen die ik in toekomstige sprints ga verwerken.
+    In het prototype heb ik de communicatie tussen de verschillende microservices gebaseerd op het https
+    -protocol.
+    In latere sprint ga ik kijken of hier een betere oplossing voor is.
+    Ook is in dit prototype het workflow algorithm verwerkt.
+    Dit algoritme controleert wanneer iets wel en niet mag gebeuren en baseert hier vervolgens de actie op die wordt
+    uitgevoerd.
+
+
+    \subsection{Achievements}\label{subsec:achievements-1}
+    Tijdens deze sprint heb ik met verschillende nieuwe technologieën geëxperimenteerd zoals HATEOAS HAl en Swagger.
+    Ook heb ik gekeken hoe de logging werkt in springboot met backlog en heb hierbij de koppeling gemaakt naar logz.io.
+
+    \subsection{Retrospective}\label{subsec:retrospective-1}
+    Ik ben zeer tevreden met de prototype die ik heb gemaakt gebaseerd op het ontwerp.
+    Deze ontwerpen zijn te vinden in de map genaamd 'assets'.
+
+    \subsection{Volgende sprint}\label{subsec:volgende-sprint-1}
+    In de volgende sprint wil ik mij gaan focussen op de gateway module die de applicatie moet gaan beveiligen en er
+    voor gaan zorgen dat requests naar de juiste service worden gelinkt.
 \end{document}
