The user can select the farm he wants to perform actions on

--- a/documentation/project/src/project_main.tex
+++ b/documentation/project/src/project_main.tex
@@ -74,13 +74,14 @@
     \newline
     Tools:
     \begin{itemize}
+        \item \href{https://github.com/rikp777/RP-Flowcontrol}{Github source code}
         \item \href{https://github.com/rikp777/RP-Flowcontrol/issues}{Github backlog}
         \item \href{https://github.com/rikp777/RP-Flowcontrol/projects/1}{Github kanban bord}
         \item \href{https://github.com/rikp777/RP-Flowcontrol/actions}{Github actions CI/CD}
     \end{itemize}
 
     \newpage
-    \section{Sprint 0}
+    \section{Sprint startup}
     \label{sec:sprint-0}
 
     \subsection{Goals}\label{subsec:goals-0}
@@ -107,7 +108,7 @@
     Zo heb ik meer inzicht op wat ik ga ontwikkelen en vooral hoe.
 
     \newpage
-    \section{Sprint 1}
+    \section{Sprint midden 1}
     \label{sec:sprint-1}
 
     \subsection{Goals}\label{subsec:goals=1}
@@ -135,7 +136,7 @@
 
 
     \newpage
-    \section{Sprint 2}
+    \section{Sprint midden 2}
     \label{sec:sprint-2}
 
     \subsection{Goals}\label{subsec:goals=2}
@@ -161,5 +162,23 @@
     In de volgende sprint wil ik mij gaan focussen op het verder uitwerken van de security en de gateway.
     Wanneer dit vervolgens af is ga ik mij verder verdiepen in de onderlinge communicatie met Kafka of RabbitMQ.
 
+
+
+    \newpage
+    \section{Sprint eind}
+    \label{sec:sprint-3}
+
+    \subsection{Goals}\label{subsec:goals=3}
+    Tijdens deze sprint heb ik de fronten geimplementeerd ook heb ik de gateway vervangen door Spring boot gateway
+    Ook heb ik HATEOAS HAL in alle services verwerkt.
+
+    \subsection{Achievements}\label{subsec:achievements-3}
+    Door de complicaties die zich voordeden bij het creeeren van een docker-compose in combinatie met zuul.
+    Heb ik ervoor gekozen Spring boot gateway te implementeren.
+    Dit heb ik gedaan omdat na onderzoek bleek dat dit de beste oplossing was bij mijn probleem.
+
+    \subsection{Retrospective}\label{subsec:retrospective-3}
+    Ik ben zeer tevreden met het eind product dat ik ontwikkeld heb.
+    De source code die bij dit project horen zijn terug te vinden door de link naar het github project te volgen.
 
 \end{document}
